tests/types/errors/fun_wrong_return.mochi
fun wrong(): int {
  return "oops"
}