tests/types/errors/fun_wrong_return.err
1. error[T008]: type mismatch: expected int, got string
  --> tests/types/errors/fun_wrong_return.mochi:2:10

  2 |   return "oops"
    |          ^

help:
  Change the value to match the expected type.